fix some white spacings

--- a/src/sass/Base/_helpers.scss
+++ b/src/sass/Base/_helpers.scss
@@ -50,7 +50,7 @@ ul {
 }
 
 .container {
-  padding-inline: func.fluid(16, 5vw, 52);
+  padding-inline: func.fluid(16, 10vw, 120);
   max-width: func.rem(1440);
   margin-inline: auto;
 }
